--- a/Circolo Tennis/src/circolo/view/login.fxml
+++ b/Circolo Tennis/src/circolo/view/login.fxml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="179.0" prefWidth="417.0" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.loginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="516.0" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.loginController">
    <right>
-      <VBox prefHeight="128.0" prefWidth="188.0" BorderPane.alignment="CENTER">
+      <VBox fx:id="vBoxLogin" prefHeight="128.0" prefWidth="188.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="admin" mnemonicParsing="false" onAction="#handleAdmin" text="Admin" />
-            <Button fx:id="ospite" mnemonicParsing="false" text="Ospite" />
+            <Button fx:id="admin" mnemonicParsing="false" onAction="#handleAdmin" text="Admin">
+               <VBox.margin>
+                  <Insets left="50.0" top="90.0" />
+               </VBox.margin></Button>
+            <Button fx:id="ospite" mnemonicParsing="false" onAction="#handleOspite" text="Ospite">
+               <VBox.margin>
+                  <Insets left="50.0" top="10.0" />
+               </VBox.margin></Button>
          </children>
       </VBox>
    </right>
