--- a/Circolo Tennis/src/circolo/view/ListaPartecipantiMatchplay.fxml
+++ b/Circolo Tennis/src/circolo/view/ListaPartecipantiMatchplay.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.ListaPartecipantiMatchplayController">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.ListaPartecipantiMatchplayController">
    <center>
       <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
@@ -24,7 +24,7 @@
    <bottom>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <buttons>
-          <Button fx:id="rimuovi" disable="true" mnemonicParsing="false" text="Rimuovi" />
+          <Button fx:id="rimuovi" disable="true" mnemonicParsing="false" onAction="#handleRimuovi" text="Rimuovi" />
         </buttons>
          <BorderPane.margin>
             <Insets right="10.0" />
