Modifica interfaccia utente

--- a/Circolo Tennis/src/circolo/view/ProgramUI.fxml
+++ b/Circolo Tennis/src/circolo/view/ProgramUI.fxml
@@ -7,73 +7,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<TabPane prefHeight="336.0" prefWidth="431.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.ProgramUIController">
+<TabPane fx:id="tabPane" prefHeight="336.0" prefWidth="431.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.ProgramUIController">
   <tabs>
-    <Tab text="Gestione Iscritti">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <SplitPane fx:id="splitIscritti" layoutX="200.0" layoutY="106.0" prefHeight="307.0" prefWidth="431.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <items>
-                      <AnchorPane focusTraversable="true" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                           <children>
-                              <VBox focusTraversable="true" prefHeight="369.0" prefWidth="175.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <children>
-                                    <Button mnemonicParsing="false" onAction="#shownewGiocatore" text="Nuovo Iscritto" />
-                                    <Button mnemonicParsing="false" onAction="#showricercaGiocatore" text="Ricerca" />
-                                 </children>
-                              </VBox>
-                           </children>
-                        </AnchorPane>
-                    </items>
-                  </SplitPane>
-               </children></AnchorPane>
-      </content>
-    </Tab>
-    <Tab text="Prenotazioni Campi">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <SplitPane fx:id="splitPrenotazioni" layoutX="116.0" layoutY="74.0" prefHeight="307.0" prefWidth="431.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <items>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                           <children>
-                              <VBox layoutX="13.0" layoutY="53.0" prefHeight="305.0" prefWidth="125.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <children>
-                                    <Button mnemonicParsing="false" onAction="#showprenotazioneCampo" text="Nuova Prenotazione" />
-                                    <Button mnemonicParsing="false" onAction="#showUltimePrenotazioni" text="Cronologia" />
-                                 </children>
-                              </VBox>
-                           </children>
-                        </AnchorPane>
-                    </items>
-                  </SplitPane>
-               </children></AnchorPane>
-      </content>
-    </Tab>
-      <Tab text="Gestione Visite Mediche">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <SplitPane fx:id="splitVisite" layoutX="116.0" layoutY="74.0" prefHeight="307.0" prefWidth="431.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <items>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                           <children>
-                              <VBox layoutY="14.0" prefHeight="305.0" prefWidth="429.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <children>
-                                    <Button mnemonicParsing="false" onAction="#showNewVisitaMedica" text="Nuova Visita" />
-                                    <Button mnemonicParsing="false" text="Cronologia" />
-                                 </children>
-                              </VBox>
-                           </children>
-                        </AnchorPane>
-                    </items>
-                  </SplitPane>
-               </children>
-            </AnchorPane>
-        </content>
-      </Tab>
-      <Tab text="MatchPlay">
+    <Tab fx:id="Iscritti" text="Gestione Iscritti" />
+    <Tab fx:id="Prenotazioni" onSelectionChanged="#showGestionePrenotazioni" text="Gestione Prenotazioni" />
+      <Tab fx:id="Matchplay" text="MatchPlay">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
@@ -86,7 +24,7 @@
                                     <Button mnemonicParsing="false" onAction="#showNuovoPartecipante" text="Nuovo Partecipante" />
                                     <Button mnemonicParsing="false" onAction="#showListaPartecipanti" text="Lista Iscritti" />
                                     <Button mnemonicParsing="false" onAction="#showGironi" text="Gironi" />
-                                    <Button mnemonicParsing="false" text="Partite" />
+                                    <Button mnemonicParsing="false" onAction="#showPartite" text="Partite" />
                                     <Button mnemonicParsing="false" text="Risultati" />
                                     <Button mnemonicParsing="false" text="Ricerca" />
                                  </children>
