--- a/Circolo Tennis/src/circolo/view/cronologiaPrenotazioni.fxml
+++ b/Circolo Tennis/src/circolo/view/cronologiaPrenotazioni.fxml
@@ -3,21 +3,20 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
-<BorderPane minWidth="-Infinity" prefHeight="420.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.cronologiaPrenotazioniController">
+<BorderPane prefHeight="420.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.cronologiaPrenotazioniController">
    <center>
       <TableView fx:id="table" editable="true" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="titolare" prefWidth="75.0" text="Titolare" />
             <TableColumn fx:id="recapito" prefWidth="75.0" text="Recapito" />
           <TableColumn fx:id="numCampo" prefWidth="103.0" text="Campo" />
-            <TableColumn fx:id="data" prefWidth="75.0" text="Data" />
             <TableColumn fx:id="Inizio" prefWidth="75.0" text="Inizio" />
             <TableColumn fx:id="Fine" prefWidth="75.0" text="Fine" />
             <TableColumn fx:id="importo" prefWidth="75.0" text="Importo" />
@@ -31,9 +30,9 @@
    <top>
       <Pane prefHeight="36.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="14.0" layoutY="10.0" text="Numero di prenotazioni da ricercare:" />
-            <TextField fx:id="numero" layoutX="226.0" layoutY="6.0" prefHeight="25.0" prefWidth="84.0" />
-            <Button layoutX="322.0" layoutY="6.0" mnemonicParsing="false" onAction="#handleTrova" text="Trova" />
+            <Label layoutX="14.0" layoutY="10.0" text="Data Prenotazioni da ricercare" />
+            <Button layoutX="401.0" layoutY="6.0" mnemonicParsing="false" onAction="#handleTrova" text="Trova" />
+            <DatePicker fx:id="data" layoutX="199.0" layoutY="6.0" />
          </children>
       </Pane>
    </top>
