--- a/Circolo Tennis/src/circolo/view/login.fxml
+++ b/Circolo Tennis/src/circolo/view/login.fxml
@@ -1,32 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Pane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="516.0" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.loginController">
-   <right>
-      <VBox fx:id="vBoxLogin" prefHeight="128.0" prefWidth="188.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="admin" mnemonicParsing="false" onAction="#handleAdmin" text="Admin">
-               <VBox.margin>
-                  <Insets left="50.0" top="90.0" />
-               </VBox.margin></Button>
-            <Button fx:id="ospite" mnemonicParsing="false" onAction="#handleOspite" text="Ospite">
-               <VBox.margin>
-                  <Insets left="50.0" top="10.0" />
-               </VBox.margin></Button>
-            <Button fx:id="backdoor" mnemonicParsing="false" text="Backdoor">
-               <VBox.margin>
-                  <Insets left="50.0" top="20.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-      </VBox>
-   </right>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="516.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.loginController">
    <center>
       <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
          <image>
@@ -34,4 +17,16 @@
          </image>
       </ImageView>
    </center>
+   <right>
+      <Pane prefHeight="250.0" prefWidth="247.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="14.0" layoutY="86.0" text="Username" />
+            <Label layoutX="14.0" layoutY="125.0" text="Password" />
+            <TextField fx:id="username" layoutX="79.0" layoutY="82.0" />
+            <PasswordField fx:id="password" layoutX="79.0" layoutY="121.0" />
+            <Button fx:id="backdoor" layoutX="79.0" layoutY="166.0" mnemonicParsing="false" text="Backdoor" />
+            <Button layoutX="176.0" layoutY="166.0" mnemonicParsing="false" onAction="#handleLogin" text="Login" />
+         </children>
+      </Pane>
+   </right>
 </BorderPane>
