--- a/Circolo Tennis/src/circolo/view/nuovaVisitaMedica.fxml
+++ b/Circolo Tennis/src/circolo/view/nuovaVisitaMedica.fxml
@@ -1,51 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.newVisitaMedicaController">
-   <bottom>
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+
+<AnchorPane maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="93.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.newVisitaMedicaController">
+   <children>
+      <ButtonBar layoutX="386.0" layoutY="47.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.rightAnchor="14.0">
         <buttons>
           <Button mnemonicParsing="false" onAction="#handleOK" text="OK" />
             <Button mnemonicParsing="false" onAction="#handleAnnulla" text="Annulla" />
         </buttons>
-         <BorderPane.margin>
-            <Insets right="10.0" />
-         </BorderPane.margin>
       </ButtonBar>
-   </bottom>
-   <center>
-      <GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="202.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="313.0" minWidth="10.0" prefWidth="301.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="299.0" minWidth="10.0" prefWidth="299.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="101.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="121.0" minHeight="10.0" prefHeight="89.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="121.0" minHeight="10.0" prefHeight="89.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <Pane layoutX="14.0" layoutY="7.0" prefHeight="80.0" prefWidth="396.0">
          <children>
-            <Label alignment="CENTER" prefHeight="17.0" prefWidth="298.0" text="Data" />
-            <Label alignment="CENTER" prefHeight="17.0" prefWidth="300.0" text="Codice Fiscale Paziente" GridPane.rowIndex="1" />
-            <DatePicker fx:id="data" prefHeight="25.0" prefWidth="175.0" GridPane.columnIndex="1" />
-            <TextField fx:id="cf" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="175.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <CheckBox fx:id="agonistica" mnemonicParsing="false" text="Agonistica" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="120.0" />
-               </GridPane.margin>
-            </CheckBox>
+            <Label layoutX="14.0" layoutY="23.0" text="Data" />
+            <DatePicker fx:id="data" layoutX="51.0" layoutY="19.0" />
+            <CheckBox fx:id="agonistica" layoutX="250.0" layoutY="23.0" mnemonicParsing="false" text="Agonistica" />
          </children>
-      </GridPane>
-   </center>
-</BorderPane>
+      </Pane>
+   </children>
+</AnchorPane>
