--- a/Circolo Tennis/src/circolo/view/rootLayout.fxml
+++ b/Circolo Tennis/src/circolo/view/rootLayout.fxml
@@ -1,30 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.rootLayoutController">
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
+      <ToolBar fx:id="logout" nodeOrientation="RIGHT_TO_LEFT" prefHeight="29.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <items>
+            <Button maxHeight="-Infinity" mnemonicParsing="false" onAction="#handleLogout" prefHeight="5.0" text="Logout">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets></Button>
+         </items>
+      </ToolBar>
    </top>
 </BorderPane>
