--- a/Circolo Tennis/src/circolo/view/background.css
+++ b/Circolo Tennis/src/circolo/view/background.css
@@ -1,3 +1,3 @@
 .anchor {
-    -fx-background-image:url('file:C:/Users/malve_000/Desktop/Progetto-Tennis/Background.jpg');
+    -fx-background-image:url('Background.jpg');
 }
