--- a/Circolo Tennis/src/circolo/view/background2.css
+++ b/Circolo Tennis/src/circolo/view/background2.css
@@ -1,3 +1,3 @@
 .anchor {
-    -fx-background-image:url('file:C:/Users/malve_000/Desktop/Progetto-Tennis/Background2.jpg');
+    -fx-background-image:url('Background2.jpg');
 }
