--- a/Circolo Tennis/src/circolo/view/login.fxml
+++ b/Circolo Tennis/src/circolo/view/login.fxml
@@ -23,7 +23,7 @@
             <Label layoutX="14.0" layoutY="86.0" text="Username" />
             <Label layoutX="14.0" layoutY="125.0" text="Password" />
             <TextField fx:id="username" layoutX="79.0" layoutY="82.0" />
-            <PasswordField fx:id="password" layoutX="79.0" layoutY="121.0" />
+            <PasswordField fx:id="password" layoutX="79.0" layoutY="121.0" onAction="#handleLogin"/>
             <Button fx:id="backdoor" layoutX="79.0" layoutY="166.0" mnemonicParsing="false" text="Backdoor" />
             <Button layoutX="176.0" layoutY="166.0" mnemonicParsing="false" onAction="#handleLogin" text="Login" />
          </children>
